<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown"

    tools:context="MhdAkn.quizzgames.quizSport">
    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/medium_marge"
        android:layout_marginTop="@dimen/medium_marge"
        android:layout_marginEnd="@dimen/medium_marge"
        android:layout_marginBottom="@dimen/medium_marge"
        android:padding="@dimen/dimen1"
        android:backgroundTint="#AFA01D"
        android:textSize="@dimen/size25"
        android:text="@string/sport"
        android:textAlignment="center"
        tools:ignore="RtlCompat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview2"
            android:layout_width="323dp"
            android:layout_height="64dp"
            android:layout_marginStart="@dimen/medium_marge"
            android:layout_marginTop="@dimen/medium_marge"
            android:layout_marginEnd="@dimen/medium_marge"
            android:layout_marginBottom="@dimen/medium_marge"
            android:backgroundTint="#2196F3"
            android:paddingTop="@dimen/dimen1"
            android:textColor="@color/white"

            android:text="@string/quiz1" />


        <TextView
            android:layout_marginLeft="@dimen/dimen1"
            android:id="@+id/checkBox1"
            android:layout_width="323dp"
            android:layout_height="64dp"
            android:text="@string/choix1" />

        <TextView
            android:layout_marginLeft="@dimen/dimen1"
            android:layout_width="323dp"
            android:layout_height="64dp"
            android:id="@+id/checkBox2"
            android:text="@string/choix2" />

        <TextView
            android:layout_marginLeft="@dimen/dimen1"
            android:layout_width="323dp"
            android:layout_height="64dp"
            android:id="@+id/checkBox3"
            android:text="@string/choix3" />

    </LinearLayout>
</RelativeLayout>