<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown"

    tools:context="MhdAkn.quizzgames.quizLitterature">
    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/medium_marge"
        android:layout_marginTop="@dimen/medium_marge"
        android:layout_marginEnd="@dimen/medium_marge"
        android:layout_marginBottom="@dimen/medium_marge"
        android:background="@drawable/border"
        android:backgroundTint="@color/material_on_primary_emphasis_high_type"
        android:padding="@dimen/dimen1"
        android:text="@string/culture"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="@dimen/size25"
        tools:ignore="RtlCompat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview2"
            android:layout_width="323dp"
            android:layout_height="70dp"
            android:layout_marginStart="@dimen/medium_marge"
            android:layout_marginTop="@dimen/medium_marge"
            android:layout_marginEnd="@dimen/medium_marge"
            android:layout_marginBottom="@dimen/medium_marge"
            android:backgroundTint="#2196F3"
            android:paddingTop="@dimen/dimen1"
            android:textColor="@color/white"
            android:text="@string/quiz1"
            android:textSize="25dp"/>


        <TextView

            android:id="@+id/checkBox1"
            android:layout_width="323dp"
            android:layout_height="64dp"
            android:layout_marginLeft="35dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen1"
            android:background="@drawable/quizd"
            android:text="@string/choix1" />

        <TextView

            android:layout_width="323dp"
            android:layout_height="64dp"
            android:id="@+id/checkBox2"
            android:layout_marginLeft="35dp"
            android:background="@drawable/quizd"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen1"
            android:text="@string/choix2" />

        <TextView

            android:layout_width="323dp"
            android:background="@drawable/quizd"
            android:layout_height="64dp"
            android:id="@+id/checkBox3"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen1"
            android:gravity="center"
            android:layout_marginLeft="35dp"
            android:text="@string/choix3" />

    </LinearLayout>
</RelativeLayout>